Fixed CSS for Collapsed Customizer Sidebar in WP 4.3
git-svn-id: https://plugins.svn.wordpress.org/auto-collapse/trunk@1215014 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -30,15 +30,18 @@ ul#adminmenu {background: transparent;}
     opacity: 1;
     /*transition: all 200ms 200ms linear;*/
 }
-.wp-full-overlay a.collapse-sidebar {
-    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.85) !important;
+.wp-core-ui .wp-full-overlay.collapsed .collapse-sidebar {
+    background-color: rgba(255, 255, 255, 0.85) !important;
+    border-right: 1px solid #000 !important;
+    top: 0;
     bottom: 0;
+    left: 0;
     height: 100%;
-    transform: translateX(-15px);
-    width: 30px;
+    width: 25px;
 }
+.wp-core-ui .wp-full-overlay.collapsed .collapse-sidebar span {display: none !important; visibility: hidden;}
 .wp-full-overlay.expanded {margin-left: 0px !important;}
-.wp-full-overlay.expanded a.collapse-sidebar {
+.wp-full-overlay.expanded .collapse-sidebar {
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0) !important;
     width: 0px;
 }
